--- a/src/app/features/books/pages/subject-page/subject-page.html
+++ b/src/app/features/books/pages/subject-page/subject-page.html
@@ -1,4 +1,4 @@
 <div class="mx-auto max-w-xl p-4 space-y-4">
   <app-search-bar />
-  <app-book-list />
+  <app-book-list [subject]="subject()" />
 </div>
