feat: implement book card component with cover images and authors

--- a/src/app/features/books/components/book-list/book-list.html
+++ b/src/app/features/books/components/book-list/book-list.html
@@ -1,1 +1,5 @@
-<p>book-list works!</p>
+<div class="space-y-2">
+  @for (book of books(); track book.id) {
+  <app-book-card [book]="book" (selectBook)="selectBook.emit(book)" />
+  }
+</div>
