--- a/src/app/features/books/components/search-bar/search-bar.html
+++ b/src/app/features/books/components/search-bar/search-bar.html
@@ -1,1 +1,3 @@
-<p>search-bar works!</p>
+<input type="text" [value]="draft()" (input)="onInput($event)" (keydown.enter)="submit()" />
+
+<button type="button" (click)="submit()">Search</button>
