--- a/src/app/features/books/components/book-list/book-list.html
+++ b/src/app/features/books/components/book-list/book-list.html
@@ -1,4 +1,4 @@
-<div class="space-y-2">
+<div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4">
   @for (book of books(); track book.id) {
   <app-book-card [book]="book" (selectBook)="selectBook.emit(book)" />
   }
